Update ServiceLogic.java